# PythonPackageWorkshop

./: .gitignore  CITATION.cff  LICENSE  README.md  changelog.md  noxfile.py  pyproject.toml
.github/workflows/: publishtopypi.yml
src/package/: rescale.py
src/packageworkshop/: rescale.py
tests/: test_rescale.py
