[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"] # Where to build packages

[tool.hatch.version]
path = "src/packageworkshop/__init__.py" # dynamically set version as __version__ in this python file

[project]
name = "packageworkshop1" #package name is package
dynamic = ["version"] # dynamically set version by previous path
#version = "0.1.0" # Set version as fixed
authors = [
  { name="Junying (Alice) Fang", email="jf3375@princeton.edu" },
]
description = "A package to show how to package and publish python codes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]  # Show basic information of packages
dependencies=[ # Would install these packages when building and installing our package
    "numpy>=1.26.2",
    "pytest>=7.4.3",
    "nox>=2023.4.22"
]

[project.optional-dependencies]
docs = [
    "myst_parser >=0.13",
    "sphinx >=4.0",
    "sphinx-rtd-theme"
]


[project.urls]
"Homepage" = "https://github.com/fjying/PythonPackageWorkshop"

