[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"] # Where to build packages

[tool.hatch.version]
path = "src/packageworkshop/__init__.py" # dynamically set version as global variable in this python file

[project]
name = "packageworkshop" #package name is packageworkshop, package name needs to be unique to be published
dynamic = ["version"] # dynamically set version by previous path
#version = "0.1.0" # Set version as fixed
authors = [
  { name="Junying (Alice) Fang", email="jf3375@princeton.edu" },
]
description = "A package to show how to package and publish python codes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]  # Show basic information of packages
dependencies=[ # Would install these packages when building and installing our package
    "numpy", #for specific package version: numpy>=1.2.62
    "pytest",
    "nox"
]

[project.optional-dependencies]
docs = [
    "myst_parser",
    "sphinx",
    "sphinx-rtd-theme"
]


[project.urls]
"Homepage" = "https://github.com/fjying/PythonPackageWorkshop"

